# AutoHedge

./: .gitignore  README.md  example.py  main.py  pyproject.toml  requirements.txt
autohedge/: __init__.py  autohedge.py
autohedge/agents/: __init__.py  factory.py  prompts.py
autohedge/core/: __init__.py  config.py  enums.py  models.py
autohedge/data/: __init__.py  market.py
autohedge/intelligence/: __init__.py  base.py  registry.py
autohedge/intelligence/providers/: __init__.py  earnings.py  macro.py  news.py  news_scraper.py  sector.py  sentiment.py  technical.py
autohedge/trading/: __init__.py  cycle.py  state_machine.py  tasks.py
tests/: __init__.py  test_agents.py  test_autohedge.py  test_core.py  test_data.py  test_intelligence.py  test_trading.py
